--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -1,6 +1,5 @@
 .navbar-lewagon {
   justify-content: space-between;
-  background: white;
 }
 
 .navbar-lewagon .navbar-collapse {
@@ -10,3 +9,20 @@
 .navbar-lewagon .navbar-brand img {
   width: 40px;
 }
+
+.navbar {
+  background-color: transparent;
+  position: fixed;
+  margin-bottom: 15px;
+  display: flex;
+  justify-content: end;
+  width: 100%;
+}
+
+.nav-bar {
+  color: white;
+}
+
+// .container-fluid {
+//   width: 100%;
+// }
