--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,21 @@
-<h1>Pages#home</h1>
-<p>Find me in app/views/pages/home.html.erb</p>
+<div class="wrapper">
+  <span class="name">
+    <h2>SANTIAGO MICOLINI,</h2>
+    <h2>FULLSTACK DEVELOPER,</h2>
+    <h2>BASED ON BARCELONA - SPAIN</h2>
+  </span>
+  <span class="about">
+  <h2>About</h2>
+  <p class="description">After having finished an intensive bootcamp in Full Stack Development at Le Wagon Barcelona, I'm very motivated to start working as a full stack developer. During the bootcamp, I enjoyed both front end and back end development and enjoyed building features that encompassed the two.
+    Prior to the bootcamp, I was working in the specialty coffee industry. This career started in Australia in 2018 after finishing university, where I studied civil engineering. I fell in love with Australia and with specialty coffee and decided to pursue this while improving my English.
+    Working as a barista helped me to learn how to work in teams in a high-pressure, fast paced environment. It also helped me to develop great communication and time management skills (It's a challenge to serve 12kg of high-quality coffee a day while keeping customers happy).
+    I always had a entrepreneurial spirit and after returning from Australia to Argentina due to the pandemic, I opened my own coffee shop (@caferia.cafe). As the leader of the project, I was responsible for many aspects of the brand, including conceptualization and business ideas to the execution of the project (architecture, providers, employees). We have been awarded with bronze medal in the "Latin America Design Awards" in best branding category.
+    After 2 years of stable business, I decided that it was time to move forward and take on something new. I moved to Barcelona and started exploring the possibilities of graphic design and web development and I discovered that I was fascinated by the relationship between these two fields. I wanted to return to my engineering roots and ended up enrolling on the course at Le Wagon, where I discovered my passion for coding.</p>
+    </span>
+  <span class="contact">
+    <h2>Contact</h2>
+    <p>Phone: +34 675 879 695</p>
+    <p>Email: santi.micolini2@gmail.com</p>
+    <p>LinkedIn: /santiagomicolini</p>
+  </span>
+</div>
