--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1,1 +1,48 @@
 // Specific CSS for your home-page
+h2 {
+  margin: 0;
+}
+
+.wrapper {
+  display: flex;
+  scroll-snap-type: x mandatory;
+  height: 100vh;
+  width: 100vw;
+  overflow-x: scroll;
+}
+
+.name h2 {
+  font-size: 70px;
+  font-family: sans-serif;
+  line-height: 100px;
+}
+
+.name {
+  font-family: sans-serif;
+  scroll-snap-align: start;
+  min-width: 100vw;
+  padding-top: 30px;
+  background-color: #000000;
+  color: #f5f4ee;
+}
+
+.about {
+  font-family: sans-serif;
+  scroll-snap-align: start;
+  min-width: 100vw;
+  padding-top: 30px;
+  background-color: #439775;
+}
+
+.contact {
+  font-family: sans-serif;
+  scroll-snap-align: start;
+  min-width: 100vw;
+  padding-top: 30px;
+  background-color: #E9B44C;
+}
+
+.description {
+  display: flex;
+  padding: 50px;
+}
