Javascript types.js

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,8 +1,6 @@
 <div class="wrapper">
   <span class="name">
-    <h2>SANTIAGO MICOLINI,</h2>
-    <h2>FULLSTACK DEVELOPER,</h2>
-    <h2>BASED ON BARCELONA - SPAIN</h2>
+    <h2 data-controller="typed-js"></h2>
   </span>
   <span class="about">
   <h2>About</h2>
