--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -26,6 +26,14 @@ h2 {
   color: #f5f4ee;
 }
 
+.name {
+  display: flex;
+  justify-content: center;
+  align-items: flex-end;
+  flex-direction: column;
+  padding-right: 50px;
+}
+
 .about {
   font-family: sans-serif;
   scroll-snap-align: start;
